--- a/sailing/sailboats/cutter.html
+++ b/sailing/sailboats/cutter.html
@@ -122,14 +122,59 @@
 </tr>
 
 <tr>
- <td width=250><a href="sailboats/Cutter/Jolie-Brise.html">Jolie Brise</a><br>1913<br>Alexandre Paris<br>LWL : 14.6m / 48'
-. Beam : 4.8m / 15'9"
-. Draft : 3.1m / 10'2".  43t</td>
+ <td width=250>Jolie Brise. 1913<br>
+Alexandre Paris<br>
+LWL : 14.6m / 48'<br>
+Beam : 4.8m / 15'9"<br>
+Draft : 3.1m / 10'2".  43t
+<details>
+ 	<summary>подробнее</summary><div class="flex">
+<div>
+ <h2> Jolie Brise </h2>
+Designer:	Alexandre Paris <br>
+Type of Boat:	Le Havre Pilot Cutter <br>
+Rig:	Gaff Cutter <br>
+Year Built:	1913 <br>
+Built By:	Albert Paumelle Shipyard, Le Havre, France <br>
+LOA : 	22.5m / 74' <br>
+LOD :	17m / 56' <br>
+LWL : 	14.6m / 48' <br>
+Beam :	4.8m / 15'9" <br>
+Draft : 	3.1m / 10'2" <br>
+Disp : 43 tonnes <br>
+Sail Area: 2,200sq.ft Sail No. DS2 <br>
+
+<a href="http://www.mainsail.ru/rus/boat/document909.shtml">mainsail.ru</a><br>
+<a href="https://en.wikipedia.org/wiki/Jolie_Brise">wikipedia.org</a><br>
+</div>
+<iframe src="https://player.vimeo.com/video/167664774" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/d1.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/d1-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/d2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/d2-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/d3.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/d3-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/d4.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/d4-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/j1.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j1-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/j2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j2-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/j3.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j3-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/j4.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j4-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/j5.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j5-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/j7.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j7-200.jpg"></a>
+<a href="../sailing/sailboats/Cutter/Jolie-Brise/j8.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j8-200.jpg"></a>
+</div>
+<div>
+<p>56-футовый лоцманский гафельный тендер 1913 года постройки.</p>
+<p> Корпус Jolie Brise был изготовлен из дуба: шпангоуты, расположенные с интервалом в 10 дюймов, выполнены из 5-дюймового бруса, а обшивка имеет толщину 2 дюйма. Длина яхты — 56 футов, осадка — 3,2 метра. Лодка имеет прямой форштевень и большой кормовой подзор. Благодаря такой форме корпуса и большому весу, Jolie Brise очень устойчива даже в самую неспокойную погоду. </p>
+<p>15 августа 1925 года Мартин стартовал на этой яхте в первой Фастнетской гонке. Тогда соревновалось всего семь яхт, две из них довольно быстро сошли с дистанции, а Jolie Brise победила с большим отрывом. На весь путь в 615 миль у нее ушло 6 дней 14 часов и 45 минут.</p>
+<p>Во второй Фастнетской гонке 1928 года яхта заняла второе место и в том же году была продана Бобу Сомерсету — одному из сооснователей королевского яхт-клуба. Сомерсет выиграл на ней еще несколько больших регат, в том числе Фастнет 1929 и 1930 годов, а также первую Santander race — тогда эта гонка называлась Кубком королевы Испании.</p>
+</div>
+ </div></details>
+</td>
  <td>
 <a href="../sailing/sailboats/Cutter/Jolie-Brise/j1.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/j1-200.jpg"></a>
 <a href="../sailing/sailboats/Cutter/Jolie-Brise/d2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/Jolie-Brise/d2-200.jpg"></a>
 </td>
 </tr>
+
 <tr>
  <td>Чертеж LX - 6<br>длина - 16.46 м, ширина - 6.83 м, осадка - 3.28 м</td>
  <td><a href="../sailing/sailboats/Cutter/60_06_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Cutter/60_06_b-200.jpg"></a>
