--- a/programming/php.html
+++ b/programming/php.html
@@ -41,50 +41,69 @@
 <div>
   install: php, web-server(Apache) , database(MySQL) <br>
   launch: web-server(Apache) <br>
+
+<b>типы данных</b>
+<pre><code>
+integer, float, string, array, object, bolean;
+
+var_dump($varName);  // показывает тип данных переменной
+echo gettype($varName);  //  тоже самое
+settype($varName, "integer");  // преобразование типа переменнной
+</code></pre>
+
 <b>number</b>
   <pre><code>
-    round($var,2);  // округляет, кол-во знаков после запятой
-    ceil($var);  // округляет до целого в большую сторону
-    floor($var);  // округляет до целого в меньшую сторону
-    min(arr);  // возвращает наименьшее значение
-    max(arr);  // возвращает наибольшее значение
-    pow(3,4);  // возводит первый аргумент в степень равную второму аргументу
-
+round($var,2);  // округляет, кол-во знаков после запятой
+ceil($var);  // округляет до целого в большую сторону
+floor($var);  // округляет до целого в меньшую сторону
+min(arr);  // возвращает наименьшее значение
+max(arr);  // возвращает наибольшее значение
+pow(3,4);  // возводит первый аргумент в степень равную второму аргументу
   </code></pre>
+
 <b>string</b>
   <pre><code>
-    $address = "{$number}@txt.att.net";
+$address = "{$number}@txt.att.net";
 
-    explode(" ", $str);  // разбивает в " " строку в массив
-    parse_str($str, $obj);  // разобрать строку(запрос) в обьект $obj
-    strlen($var);  // длину строки в value
-    strpos($str,$var);  // возвращает первую позицию $var в строке $str
-    stripos();  // тоже самое ,без учета регистра
-    str_repeat($str, 8);  // повторяет $str 8 раз
-    str_replace($a,$b,$c);  // в $c заменяет $a на $b
-    str_split($str, 3);  // разбивает строку на элементы массива по 3 символа
-    strrev($str);  // строку наоборот
-    substr($str, -2, 3);  // часть $str с позиции -2 три символа
-    substr_count($str,$var,3,17);  // число вхождений $var с позиции3 на 17символов вперед
-
+explode(" ", $str);  // разбивает в " " строку в массив
+parse_str($str, $obj);  // разобрать строку(запрос) в обьект $obj
+strlen($var);  // длину строки в value
+strpos($str,$var);  // возвращает первую позицию $var в строке $str
+stripos();  // тоже самое ,без учета регистра
+str_repeat($str, 8);  // повторяет $str 8 раз
+str_replace($a,$b,$c);  // в $c заменяет $a на $b
+str_split($str, 3);  // разбивает строку на элементы массива по 3 символа
+strrev($str);  // строку наоборот
+substr($str, -2, 3);  // часть $str с позиции -2 три символа
+substr_count($str,$var,3,17);  // число вхождений $var с позиции3 на 17символов вперед
   </code></pre>
+
 <b>array</b>
   <pre><code>
-    $gas = array(1, 2);  // массив
-    $gas = [1,3,7];
-    echo $gas[0];
+$gas = array(1, 2);  // массив
+$gas = [1,3,7];
+echo $gas[0];
+array_push($name); //добавить в массив
+foreach ($lines as $line) {echo $line};
 
-    array_push($name); //добавить в массив
-    foreach ($lines as $line) {echo $line};
-
+["title" => "cs50"] //ассоциативный массив
   </code></pre>
+
+<b>object</b>
+<pre><code>
+$objName = new afClass();  // обьект
+$objName->duy = "feld";
+echo $objName->duy;
+</code></pre>
+
 <b>files work</b>
   <pre><code>
-    fopen("file.csv", "r"); //открыть файл для чтения
-    fgetcsv($name) // return array
-    fclose($name); // закрыть файл
+fopen("file.csv", "r"); //открыть файл для чтения
+fgetcsv($name) // return array
+fclose($name); // закрыть файл
   </code></pre>
 </div>
+
 <div>
     <pre><code>
 $_COOKIE
@@ -94,21 +113,22 @@ $_SERVER
 $_SESSION
     </code></pre>
 </div>
+
 <div>
   <pre><code>
 < ?php 
+extract($data);
+require("functions.php"); // import
 
-    require("functions.php"); // import
-
-    echo 'html-cod';  // может принимать список аргументов
-    ''  // только текст
-    $varName = "peremenna";  // перед именем переменной ставится $
-    echo "text $varName";  // переменная встраивается в текст с ""
-    echo $varName.'='.$varName;  // конкатенация точкой
-    print("text< br>");
-    printf("%d", $varName);  // %f- с плавающей точкой, %s- строка
-    print_r($arr);
-    exit(1); //выйти
+echo 'html-cod';  // может принимать список аргументов
+''  // только текст
+$varName = "peremenna";  // перед именем переменной ставится $
+echo "text $varName";  // переменная встраивается в текст с ""
+echo $varName.'='.$varName;  // конкатенация точкой
+print("text< br>");
+printf("%d", $varName);  // %f- с плавающей точкой, %s- строка
+print_r($arr);
+exit(1); //выйти
 
     if , else , elseif , switch;
 
@@ -120,16 +140,6 @@ $_SESSION
     show("windy");
 
     точка с запятой обязательны везде;
-
-integer, float, string, array, object, bolean;
-    var_dump($varName);  // показывает тип данных переменной
-    echo gettype($varName);  //  тоже самое
-    settype($varName, "integer");  // преобразование типа переменнной
-
-object
-    $objName = new afClass();  // обьект
-    $objName->duy = "feld";
-    echo $objName->duy;
 
     $var2 = &$varName;  // присвоение ссылки на переменную
 
@@ -154,4 +164,15 @@ object
 
 ?>
   </code></pre>
+</div>
+
+<div>
+    <pre><code>
+< ?php require("header.php"); ?>
+< main>< /main>
+< ?php require("footer.php"); ?>
+< ?php funcName($title) ?>
+< h1>< ?= $title ?>< /h1>
+< h1>< ?= funcName() ?>< /h1>
+    </code></pre>
 </div>
